Added search bar
