# src/Api/Dfe.Complete.Api.Client/Generated/swagger.json
@@ -962,6 +962,44 @@
         }
       }
     },
+    "/v1/Projects/SearchProjects": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "summary": "Search list of project based on search criteria",
+        "operationId": "Projects_SearchProjects",
+        "parameters": [
+          {
+            "name": "searchProjects",
+            "in": "query",
+            "description": "Search active projects",
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Project",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ListAllProjectsResultModel"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request data."
+          }
+        }
+      }
+    },
     "/v1/Trust/List/All": {
       "get": {
         "tags": [
